styles/style.css
/* COMMON */
@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Poppins:wght@400;600&display=swap");
html {
  scroll-behavior: smooth;
}

:root {
  font-size: 10px;
  --dark: #232323;
  --light: #fafafa;
  --heading: "Poppins", Arial, Helvetica, sans-serif;
  --copy: "Lato", Arial, Helvetica, sans-serif;
}
@media screen and (max-width: 768px) {
  :root {
    font-size: 8px;
  }
}

* {
  margin: 0;
  padding: 0;
}
body {
  font-family: var(--copy);
  color: var(--dark);
  background: var(--light);
}
section {
  padding: 64px 0;
}
a {
  color: var(--dark);
  text-decoration: none;
}
/* HERO */
.hero {
  width: 100%;
  height: 100vh;
  position: relative;
  background: var(--dark) url(../img/hero_bground.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  color: var(--light);
}
.hero__content {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  width: 80%;
}
.hero__headline {
  font-size: 6.4rem;
  margin-bottom: 3.2rem;
  font-family: var(--heading);
}
.hero__desc {
  font-size: 2.4rem;
  margin-bottom: 3.2rem;
}
.hero__social {
  font-size: 4.2rem;
}
.hero__social a {
  color: var(--light);
  display: inline-block;
  margin: 0 1.2rem;
}
.arr-down {
  position: absolute;
  bottom: 5%;
  left: 50%;
  transform: translate(-50%, 0);
  color: var(--light);
  font-size: 4.8rem;
  animation: arr-bounce 3s infinite;
}

@keyframes arr-bounce {
  0% {
    transform: translate(-50%, 0);
  }
  50% {
    transform: translate(-50%, 16px);
  }
  100% {
    transform: translate(-50%, 0);
  }
}
/* ABOUT */
.half-text {
  max-width: 1440px;
  width: 90%;
  margin: auto;
}
.half-text#about {
  height: 70vh;
}
.half-text__img {
  width: 40%;
  border-radius: 24px;
  overflow: hidden;
}
@media screen and (max-width: 866px) {
  .half-text__img {
    width: 50%;
  }
}
.half-text__img img {
  width: 100%;
}
.flex-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}
.half-text .text-content {
  width: 40%;
  padding: 3.2rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
@media screen and (max-width: 569px) {
  .half-text .text-content {
    width: 80%;
  }
}
/* CONTENTS */
.text-content__headline {
  font-size: 4.2rem;
  margin-bottom: 32px;
  font-family: var(--heading);
}
.text-content__desc {
  font-size: 1.8rem;
}
/* PROJECTS */
.bundle {
  max-width: 1440px;
  width: 90%;
  margin: 24px auto;
}
.bundle .text-content {
  text-align: center;
}
.grid-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 2.6rem;
}
.project-card {
  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
  border-radius: 12px;
  overflow: hidden;
}
.project-card__img,
.project-card__img img {
  width: 100%;
}
.project-card__contents {
  padding: 1.6rem;
}
.project-card__title {
  font-size: 2.1rem;
  margin-bottom: 16px;
  font-family: var(--heading);
}
.project-card__desc {
  font-size: 1.7rem;
  margin-bottom: 16px;
}
.project-card__ctas a {
  display: inline-block;
  padding: 1rem 3rem;
  font-size: 1.7rem;
  color: var(--dark);
  text-decoration: none;
  background: #cacaca;
  border-radius: 5px;
  margin-bottom: 10px;
}
.project-card__ctas a:first-child {
  margin-right: 10px;
}
@media screen and (max-width: 1200px) {
  .grid-container {
    grid-template-columns: repeat(2, 1fr);
  }
}
@media screen and (max-width: 678px) {
  .grid-container {
    grid-template-columns: repeat(1, 1fr);
  }
}
.contact-icons {
  margin-top: 32px;
  font-size: 4rem;
}
.contact-icons a,
.hero__social a,
.project-card__ctas a {
  transition: opacity 0.4s ease-in-out;
}
.contact-icons a:hover,
.hero__social a:hover,
.project-card__ctas a:hover {
  opacity: 0.8;
}
.footer {
  width: 100%;
  border-top: 1px solid #cacaca;
}
.footer__text {
  padding: 24px;
  font-size: 1.8rem;
  text-align: center;
}

